Added some bootstrap component to the main Page

--- a/MyWebApp/Views/Home/Index.cshtml
+++ b/MyWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container-fluid">
+    <button type="button" class="btn btn-primary">
+  Notifications <span class="badge bg-secondary">4</span>
+    </button>
+      <div class="row">
+        <div class="col-8">
+            <div class="text-center">
+                <h1 class="display-4">Welcome to my Portfolio</h1>
+            </div>
+        </div>
+        <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">About Me</h5>
+                    <p class="card-text">Some quick introduction about me to build on this card.</p>
+                    <a href="#" class="btn btn-primary">Fun fact about me</a>
+                  </div>
+                </div>
+        </div>
+      </div>
+  ...
 </div>
